--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>SOYLAB</b></h1>
-  <p>Welcome to the soybean lab <span class="w3-tag">unknown</span></p>
+  <p>Welcome to the soybean virtual lab </p>
 </header>
 
 <!-- Grid -->
