--- a/index.html
+++ b/index.html
@@ -1,148 +1,198 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Linear by TEMPLATED
+    templated.co @templatedco
+    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+	<head>
+		<title>About</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-panels.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+		</noscript>
+	</head>
+	<body>
+
+	<!-- Header -->
+		<div id="header">
+			<div id="nav-wrapper">
+				<!-- Nav -->
+				<nav id="nav">
+
+				</nav>
+			</div>
+			<div class="container">
+
+				<!-- Logo -->
+				<div id="logo">
+					<h1><a href="#"></a></h1>
+					<span class="tag"></span>
+				</div>
+			</div>
+		</div>
+	<!-- Header -->
+
+	<!-- Main -->
+		<div id="main">
+			<div id="content" class="container">
+				<section>
+					<header>
+						<h2>The Plant Breeding Journey</h2>
+						<span class="byline"></span>
+					</header>
+
+					<p>
+						Thank you for visiting my page! Since you are here, I would like to share with you a short story about how I became interested in Plant Breeding and Genetics.
+					</p>
+					<p>
+						In the beginning of my undergraduate studies, I used to go with my mother to the school where she was a teacher to study in the library while she was in class. In one of those days, when I was browsing through the bookshelves, one book caught my attention. It was the DNA the secret of life, by James D. Watson. Many things on that book were obscure for me at that time, but since the first moment I opened it, I notice that something powerful and important was being reported. After reading that book, besides the courses I was taking in my undergraduate program, I started to study genetics by myself. At that time, there was not many opportunities for undergraduate research in genetics in my campus, but to get started on research, I began working in a pastures and soil nutrition laboratory. I enjoyed my work there and it introduced me to the scientific research, but as I was moving forward with my independent studies with genetics, I knew that I should shift my focus.
+					</p>
+					<p>
+						After one year of that first encounter, in 2012 I received a scholarship to study abroad in an exchange program at the University of Alberta in Canada. I was excited because that was my chance to live in a different culture, interact with people from other countries and experience life in a new perspective. It was also an opportunity to attend inspiring classes in the genetics and agronomy. Following the two semesters of studies at the university, I had the chance to do an internship for four months at DuPont Pioneer with canola breeding, also in Canada. This experience probably defined who I am today professionally because I could participate in the process of cultivar development in the breeding program and see the importance of genetics in the process.
+					</p>
+					<p>
+						After coming back to Brazil in the end of 2013, I was hired as an English teacher in a language school and for one year, I was teaching several classes from beginners to intermediate. This experience was fundamental for me to develop proficiency in English and to have the responsibility of conducting activities in a classroom environment. When I was still working as a teacher in 2014, I began another internship, this time at Embrapa (Brazilian Agricultural Research Corporation), working with sweet sorghum breeding. I was there for seven months and I could see a different perspective of the breeding process, this time with a different crop and in a public institution.
+					</p>
+					<p>
+						After obtaining my BS in Agricultural Engineering in the end of 2014, I took some time to think about which path I would take for my life. I decided to begin a breeding effort as an independent research with one of my professors from my undergraduate program. As I had some experience working with Canola, and this crop is not present in my home state, we had the idea of testing some varieties and make selections too see if there was a potential. We had some trials done and we started to select some genotypes, but soon I figured out that despite the internships, my knowledge on plant breeding was very limited to actually make progress with the selections. After that, we put the project on hold, and I decided to study plant breeding in graduate school.
+					</p>
+					<p>
+						In 2016 I began my MSc at the University of São Paulo in Brazil. There I worked on the development of food-type soybean, where besides studying the genetic control of several traits, I made selections of new lines suitable for human consumption, with better flavor high yield. In addition to my main project, I learned important concepts in the courses I took, however the ones that had a greater impact in my decision on the PhD choice were Bioinformatics and Computational Tools Applied to Genomics, because they developed in me an interest to study the genomic foundation of the traits I was evaluating in the breeding program.
+					</p>
+					<p>
+						After going through the experiences mentioned before and having the time to improve my understanding of plant breeding and genetics, I have decided to pursue my studies in the United States for the PhD. Currently I am a second PhD student in Plant breeding genetics and genomics at the University of Georgia, under Dr. Zenglu Li. At the UGA my work is focused on understanding the genetic control of seed composition and disease resistance in soybeans. I hope that in the future I can give back all the knowledge and experience I had the privilege to access and obtain, in the form of teaching or working in the development of new cultivars.
+					</p>
+					<header>
+						<h3>
+						<span class="byline">A short bio:</span>
+						<h3/>
+					</header>
+	<!-- Stile -->
+<style type="text/css">
+img {border-radius: 50%;}
+li {list-style-position: outside;}
 </style>
-<body class="w3-light-grey">
 
-<!-- w3-content defines a container for fixed size centered content, 
-and is wrapped around the whole page content, except for the footer in this example -->
-<div class="w3-content" style="max-width:1400px">
+<div id="cv" class="instaFade">
+	<div class="mainDetails">
+		<div id="headshot" class="quickFade">
 
-<!-- Header -->
-<header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>SOYLAB</b></h1>
-  <p>Welcome to the soybean virtual lab </p>
-</header>
+			<img src="headshot.jpg" alt="Renan Souza"/>
+		</div>
+		<div class="clear"></div>
+	</div>
 
-<!-- Grid -->
-<div class="w3-row">
+	<div id="mainArea" class="quickFade delayFive">
 
-<!-- Blog entries -->
-<div class="w3-col l8 s12">
-  <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
-    <div class="w3-container">
-      <h3><b>TITLE HEADING</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
-    </div>
+		<section>
+			<div class="sectionTitle">
+				<h1>EDUCATION:</h1>
+			</div>
 
-    <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr>
+			<div class="sectionContent">
+				<article>
+					<a href="https://plantbreeding.caes.uga.edu/">University of Georgia - Institute of Plant Breeding Genetics and Genomics</a>
+					<li class="subDetails">PhD in Plant Breeding, Genetics and Genomics. January 2019 - Present.</li>
+					<li class="subDetails">Work on the genetic improvement of seed composition and disease resistance in soybeans at the <a href="https://soybeans.uga.edu/">UGA Soybean Breeding and Genetics Laboratory.</a></li>
+				</article>
 
-  <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
-    <div class="w3-container">
-      <h3><b>BLOG ENTRY</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-    </div>
+				<article>
+					<a href="http://www.en.esalq.usp.br/">University of São Paulo - College of Agriculture "Luiz de Queiroz"</a>
+					<li class="subDetails">MSc in Plant Breeding and Genetics. March 2016 - 2018.</li>
+					<li class="subDetails">Work developed on breeding specialty soybean for human consumption. You can access the thesis in this
+						<a href="https://teses.usp.br/teses/disponiveis/11/11137/tde-16072018-165807/publico/Renan_Silva_e_Souza.pdf">link</a>,
+							 and there is also a book derived from this work with information directed to farmers available
+							 <a href="https://www.esalq.usp.br/biblioteca/sites/default/files/publicacoes-a-venda/pdf/SP65.pdf">here</a>.
+						  </li>
+				</article>
 
-    <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- END BLOG ENTRIES -->
+				<article>
+					<a href="https://www.ufsj.edu.br/ingles/index.php?idioma=I">Federal University of São João del-Rei</a>
+					<li class="subDetails">B.Sc. Agricultural Engineering. March 2009 – 2014.</li>
+					<li class="subDetails">Work as an undergraduate researcher in agronomy studies of Guinea grass at <a href="http://www.epamig.br/">Epamig</a> and Sweet Sorghum breeding at <a href="https://www.embrapa.br/en/milho-e-sorgo">Embrapa Maize and Sorghum.</a> </li>
+				</article>
+
+				<article>
+					<a href="https://www.ualberta.ca/agriculture-life-environment-sciences/index.html">University of Alberta - Faculty of Agricultural, Life & Environmental Sciences</a>
+					<li class="subDetails">Visiting Undergraduate Student. September 2012 – 2013.</li>
+					<li class="subDetails">Work as an intern at <a href="https://www.pioneer.com/ca-en">DuPont Pioneer</a>, now <a href="https://www.corteva.ca/">Corteva</a>, in the Canola Breeding program for western Canada.</li>
+				</article>
+
+</div>
+			<div class="clear"></div>
+		</section>
+
+
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Selected Publications:</h1>
+			</div>
+
+			<article>
+				<li class="subDetails">Silva e Souza, R; Barbosa, PAM; Yassue, RM; et al. Combining ability for the improvement of vegetable soybean. Agronomy Journal, v. 112, 2020. <a href="https://doi.org/10.1002/agj2.20322">doi.org/10.1002/agj2.20322.</a></li>
+				<li class="subDetails">Espolador, FG; Yassue, RM; Morosini, JS; Bornhofen, E; Barbosa, PAM; Souza, RS; Vello, NA. Assessing tolerance to Asian soybean rust in soybean inbred lines from exotic and adapted crosses. Euphytica, v. 216, 2020. <a href="https://doi.org/10.1007/s10681-020-02597-8">doi.org/10.1007/s10681-020-02597-8.</a></li>
+				<li class="subDetails">Ostezan, A; McDonald, SC; Tran, DT; Silva e Souza, R; Li, Z. Target region sequencing and applications in plants. J. Crop Sci. Biotechnol. 2020. <a href="https://doi.org/10.1007/s12892-020-00056-3">doi.org/10.1007/s12892-020-00056-3.</a></li>
+				<li class="subDetails">Yassue, RM; Bornhofen, E; Espolador, FG; Barbosa, PAM; Souza, RS; Vello, NA. Uni and multivariate approaches for diallel analysis in early generation trials for soybean tolerance to rust. Bragantia, v. 78, p. 522-534, 2019. <a href="https://doi.org/10.1590/1678-4499.20190037">doi.org/10.1590/1678-4499.20190037 .</a></li>
+				<li class="subDetails">Yassue, RM; Franciscon, H; Tsutsumi, CY; Egewarth, VA; Egewarth, JF; Achre, D; Ferreira, SD; Souza, RS; et al. Adaptability and stability of wheat cultivars sown on different dates in West Paraná. African Journal of Agricultural Research, v. 12(5), p 342-347, 2017.<a href="https://doi.org/10.5897/AJAR2016.11693">doi.org/10.5897/AJAR2016.11693.</a></li>
+				<li class="subDetails">Souza, RS; Parrella, RAC; Souza, VF; Parrella, NNLD. Maturation curves of sweet sorghum genotypes. Ciência e Agrotecnologia, v. 40, p. 46-56, 2016.<a href="https://doi.org/10.1590/S1413-70542016000100004 ">doi.org/10.1590/S1413-70542016000100004.</a></li>
+			</article>
+
+		</section>
+
+	</div>
 </div>
 
-<!-- Introduction menu -->
-<div class="w3-col l4">
-  <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
-  <img src="/w3images/avatar_g.jpg" style="width:100%">
-    <div class="w3-container w3-white">
-      <h4><b>My Name</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
-    </div>
-  </div><hr>
-  
-  <!-- Posts -->
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>Popular Posts</h4>
-    </div>
-    <ul class="w3-ul w3-hoverable w3-white">
-      <li class="w3-padding-16">
-        <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Lorem</span><br>
-        <span>Sed mattis nunc</span>
-      </li>
-      <li class="w3-padding-16">
-        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Ipsum</span><br>
-        <span>Praes tinci sed</span>
-      </li> 
-      <li class="w3-padding-16">
-        <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Dorum</span><br>
-        <span>Ultricies congue</span>
-      </li>   
-      <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-        <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Mingsum</span><br>
-        <span>Lorem ipsum dipsum</span>
-      </li>  
-    </ul>
-  </div>
-  <hr> 
- 
-  <!-- Labels / tags -->
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>Tags</h4>
-    </div>
-    <div class="w3-container w3-white">
-    <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
-    </p>
-    </div>
-  </div>
-  
-<!-- END Introduction Menu -->
-</div>
+				</section>
+			</div>
+		</div>
+	<!-- /Main -->
 
-<!-- END GRID -->
-</div><br>
+	<!-- Tweet -->
+		<div id="tweet">
+			<div class="container">
+				<section>
+					<blockquote></blockquote>
+				</section>
+			</div>
+		</div>
+	<!-- /Tweet -->
 
-<!-- END w3-content -->
-</div>
+	<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<section>
+					<header>
+						<span class="byline">Connect with social networking:</span>
+					</header>
+					<ul class="contact">
+						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
+						<li><a href=https://www.linkedin.com/in/renan-souza-10214466/ class="fa fa-linkedin"><span>Pinterest</span></a></li>
+						<li><a href=https://orcid.org/0000-0002-3628-6448 class="fa fa-dribbble"><span>Pinterest</span></a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	<!-- /Footer -->
 
-<!-- Footer -->
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
+	<!-- Copyright -->
+		<div id="copyright">
+			<div class="container">
+				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+			</div>
+		</div>
 
-</body>
+
+	</body>
 </html>
