--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ li {list-style-position: outside;}
 			<div class="container">
 				<section>
 					<header>
-						<span class="byline">Connect with social networking:</span>
+						<span class="byline">Networking:</span>
 					</header>
 					<ul class="contact">
 						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -188,7 +188,7 @@ li {list-style-position: outside;}
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Design: <a href="http://templated.co">Templated</a>
 			</div>
 		</div>
 
