--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Linear by TEMPLATED
-   
+
 -->
 <html>
 	<head>
@@ -161,9 +161,7 @@ li {list-style-position: outside;}
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
-				<section>
-					<blockquote></blockquote>
-				</section>
+
 			</div>
 		</div>
 	<!-- /Tweet -->
@@ -188,7 +186,7 @@ li {list-style-position: outside;}
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">Templated</a>
+				By <a href="http://templated.co">Templated</a>
 			</div>
 		</div>
 
