--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>About</title>
+		<title>About Renan</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -137,15 +137,22 @@ li {list-style-position: outside;}
 		<section>
 			<div class="sectionTitle">
 				<h1>Selected Publications:</h1>
+				<p></p>
 			</div>
 
 			<article>
-				<li class="subDetails">Silva e Souza, R; Barbosa, PAM; Yassue, RM; et al. Combining ability for the improvement of vegetable soybean. Agronomy Journal, v. 112, 2020. <a href="https://doi.org/10.1002/agj2.20322">doi.org/10.1002/agj2.20322.</a></li>
-				<li class="subDetails">Espolador, FG; Yassue, RM; Morosini, JS; Bornhofen, E; Barbosa, PAM; Souza, RS; Vello, NA. Assessing tolerance to Asian soybean rust in soybean inbred lines from exotic and adapted crosses. Euphytica, v. 216, 2020. <a href="https://doi.org/10.1007/s10681-020-02597-8">doi.org/10.1007/s10681-020-02597-8.</a></li>
-				<li class="subDetails">Ostezan, A; McDonald, SC; Tran, DT; Silva e Souza, R; Li, Z. Target region sequencing and applications in plants. J. Crop Sci. Biotech. 2020. <a href="https://doi.org/10.1007/s12892-020-00056-3">doi.org/10.1007/s12892-020-00056-3.</a></li>
-				<li class="subDetails">Yassue, RM; Bornhofen, E; Espolador, FG; Barbosa, PAM; Souza, RS; Vello, NA. Uni and multivariate approaches for diallel analysis in early generation trials for soybean tolerance to rust. Bragantia, v. 78, p. 522-534, 2019. <a href="https://doi.org/10.1590/1678-4499.20190037">doi.org/10.1590/1678-4499.20190037 .</a></li>
-				<li class="subDetails">Yassue, RM; Franciscon, H; Tsutsumi, CY; Egewarth, VA; Egewarth, JF; Achre, D; Ferreira, SD; Souza, RS; et al. Adaptability and stability of wheat cultivars sown on different dates in West Paraná. African Journal of Agricultural Research, v. 12(5), p 342-347, 2017.<a href="https://doi.org/10.5897/AJAR2016.11693">doi.org/10.5897/AJAR2016.11693.</a></li>
-				<li class="subDetails">Souza, RS; Parrella, RAC; Souza, VF; Parrella, NNLD. Maturation curves of sweet sorghum genotypes. Ciência e Agrotecnologia, v. 40, p. 46-56, 2016.<a href="https://doi.org/10.1590/S1413-70542016000100004 ">doi.org/10.1590/S1413-70542016000100004.</a></li>
+				<p class="subDetails">Silva e Souza, R; Barbosa, PAM; Yassue, RM; et al. Combining ability for the improvement of vegetable soybean. Agronomy Journal, v. 112, 2020. <a href="https://doi.org/10.1002/agj2.20322">doi.org/10.1002/agj2.20322.</a></p>
+				<p> </p>
+				<p class="subDetails">Espolador, FG; Yassue, RM; Morosini, JS; Bornhofen, E; Barbosa, PAM; Souza, RS; Vello, NA. Assessing tolerance to Asian soybean rust in soybean inbred lines from exotic and adapted crosses. Euphytica, v. 216, 2020. <a href="https://doi.org/10.1007/s10681-020-02597-8">doi.org/10.1007/s10681-020-02597-8.</a></p>
+				<p> </p>
+				<p class="subDetails">Ostezan, A; McDonald, SC; Tran, DT; Silva e Souza, R; Li, Z. Target region sequencing and applications in plants. J. Crop Sci. Biotech. 2020. <a href="https://doi.org/10.1007/s12892-020-00056-3">doi.org/10.1007/s12892-020-00056-3.</a></p>
+				<p> </p>
+				<p class="subDetails">Yassue, RM; Bornhofen, E; Espolador, FG; Barbosa, PAM; Souza, RS; Vello, NA. Uni and multivariate approaches for diallel analysis in early generation trials for soybean tolerance to rust. Bragantia, v. 78, p. 522-534, 2019. <a href="https://doi.org/10.1590/1678-4499.20190037">doi.org/10.1590/1678-4499.20190037 .</a></p>
+				<p> </p>
+				<p class="subDetails">Yassue, RM; Franciscon, H; Tsutsumi, CY; Egewarth, VA; Egewarth, JF; Achre, D; Ferreira, SD; Souza, RS; et al. Adaptability and stability of wheat cultivars sown on different dates in West Paraná. African Journal of Agricultural Research, v. 12(5), p 342-347, 2017.<a href="https://doi.org/10.5897/AJAR2016.11693">doi.org/10.5897/AJAR2016.11693.</a></p>
+				<p> </p>
+				<p class="subDetails">Souza, RS; Parrella, RAC; Souza, VF; Parrella, NNLD. Maturation curves of sweet sorghum genotypes. Ciência e Agrotecnologia, v. 40, p. 46-56, 2016.<a href="https://doi.org/10.1590/S1413-70542016000100004 ">doi.org/10.1590/S1413-70542016000100004.</a></p>
+
 			</article>
 
 		</section>
