--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ li {list-style-position: outside;}
 
 		<section>
 			<div class="sectionTitle">
-				<h1>Selected Publications:</h1>
+				<h1>SELECTED PUBLICATIONS:</h1>
 				<p></p>
 			</div>
 
