--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ li {list-style-position: outside;}
 			<div class="container">
 				<section>
 					<header>
-						<span class="byline">Networking:</span>
+						<span class="byline">Connect:</span>
 					</header>
 					<ul class="contact">
 						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
