--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ li {list-style-position: outside;}
 					<li class="subDetails">Work developed on breeding specialty soybean for human consumption. You can access the thesis in this
 						<a href="https://teses.usp.br/teses/disponiveis/11/11137/tde-16072018-165807/publico/Renan_Silva_e_Souza.pdf">link</a>,
 							 and there is also a book derived from this work with information directed to farmers available
-							 <a href="https://www.esalq.usp.br/biblioteca/sites/default/files/publicacoes-a-venda/pdf/SP65.pdf">here</a>.
+							 <a href="https://www.esalq.usp.br/biblioteca/sites/default/files/publicacoes-a-venda/pdf/SP65.pdf">here</a> (in portuguese).
 						  </li>
 				</article>
 
