--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ li {list-style-position: outside;}
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				By <a href="http://templated.co">Templated</a>
+				<a href="http://templated.co">Templated</a>
 			</div>
 		</div>
 
