--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@ li {list-style-position: outside;}
 					</header>
 					<ul class="contact">
 						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
-						<li><a href=https://www.linkedin.com/in/renan-souza-10214466/ class="fa fa-linkedin"><span>Pinterest</span></a></li>
-						<li><a href=https://orcid.org/0000-0002-3628-6448 class="fa fa-dribbble"><span>Pinterest</span></a></li>
+						<li><a href=https://www.linkedin.com/in/renan-souza-10214466/ class="fa fa-linkedin"><span>Linkedin</span></a></li>
+						<li><a href=https://orcid.org/0000-0002-3628-6448 class="fa fa-dribbble"><span>Orcid</span></a></li>
+						<li><a href=https://www.researchgate.net/profile/Renan_Silva_E_Souza class="fa fa-researchgate"><span>Researchgate</span></a></li>
 					</ul>
 				</section>
 			</div>
