--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -183,8 +185,10 @@ li {list-style-position: outside;}
 					<ul class="contact">
 						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
 						<li><a href=https://www.linkedin.com/in/renan-souza-10214466/ class="fa fa-linkedin"><span>Linkedin</span></a></li>
-						<li><a href=https://orcid.org/0000-0002-3628-6448 class="fa fa-orcid"><span>Orcid</span></a></li>
-						<li><a href=https://www.researchgate.net/profile/Renan_Silva_E_Souza class="fa fa-researchgate"><span>Researchgate</span></a></li>
+						<li><a href=https://www.researchgate.net/profile/Renan_Silva_E_Souza><i class="fab fa-researchgate"></i></a></li>
+						<li><a href=https://orcid.org/0000-0002-3628-6448><i class="fab fa-orcid"></i></a></li>
+						<li><a href=https://scholar.google.com/citations?hl=en&user=19iHnzMAAAAJ><i class="ai ai-google-scholar"></i></a></li>
+						<li><a href=http://lattes.cnpq.br/0685442144868019><i class="ai ai-lattes"></i></a></li>
 					</ul>
 				</section>
 			</div>
@@ -197,7 +201,6 @@ li {list-style-position: outside;}
 				<a href="http://templated.co">Templated</a>
 			</div>
 		</div>
-
 
 	</body>
 </html>
