--- a/index2.html
+++ b/index2.html
@@ -191,8 +191,8 @@ li {list-style-position: outside;}
 					<ul class="contact">
 						<li><a href=https://twitter.com/renan_soy class="fa fa-twitter"><span>Twitter</span></a></li>
 						<li><a href=https://www.linkedin.com/in/renan-souza-10214466/ class="fa fa-linkedin"><span>Linkedin</span></a></li>
-						<li><a href=https://www.researchgate.net/profile/Renan_Silva_E_Souza><i class="ai ai-researchgate"></i></a></li>
-						<li><a href=https://orcid.org/0000-0002-3628-6448><i class="ai ai-orcid"></i></a></li>
+						<li><a href=https://www.researchgate.net/profile/Renan_Silva_E_Souza><i class="fab fa-researchgate"></i></a></li>
+						<li><a href=https://orcid.org/0000-0002-3628-6448><i class="fab fa-orcid"></i></a></li>
 						<li><a href=https://scholar.google.com/citations?hl=en&user=19iHnzMAAAAJ><i class="ai ai-google-scholar"></i></a></li>
 						<li><a href=http://lattes.cnpq.br/0685442144868019><i class="ai ai-lattes"></i></a></li>
 					</ul>
