added github link

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ li {list-style-position: outside;}
 						<li><a href=https://orcid.org/0000-0002-3628-6448><i class="ai ai-orcid"></i></a></li>
 						<li><a href=https://scholar.google.com/citations?hl=en&user=19iHnzMAAAAJ><i class="ai ai-google-scholar"></i></a></li>
 						<li><a href=http://lattes.cnpq.br/0685442144868019><i class="ai ai-lattes"></i></a></li>
+						<li><a href=https://github.com/renanso><i class="fa fa-github"></i></a></li>
 					</ul>
 				</section>
 			</div>
