added video links

--- a/index.html
+++ b/index.html
@@ -165,6 +165,20 @@ li {list-style-position: outside;}
 
 		</section>
 
+		<section>
+			<div class="sectionTitle">
+				<h1>SCIENCE COMMUNICATION:</h1>
+				<p> Here you will find some videos explaining a little bit more about my projects. I hope you enjoy learning more about soybeans. </p>
+			</div>
+
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/xA9pRz9pjZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bHFrw6UHAfU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  	<iframe width="560" height="315" src="https://www.youtube.com/embed/v90YS2E3g_k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
+		</section>
+
+
+
 	</div>
 </div>
 
