Updated font size

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ li {list-style-position: outside;}
 
 		<section>
 			<div class="sectionTitle">
-				<h1>EDUCATION:</h1>
+				<h1 style="font-size:15px">EDUCATION:</h1>
 			</div>
 
 			<div class="sectionContent">
@@ -144,7 +144,7 @@ li {list-style-position: outside;}
 
 		<section>
 			<div class="sectionTitle">
-				<h1>SELECTED PUBLICATIONS:</h1>
+				<h1 style="font-size:15px">SELECTED PUBLICATIONS:</h1>
 				<p></p>
 			</div>
 
@@ -167,7 +167,8 @@ li {list-style-position: outside;}
 
 		<section>
 			<div class="sectionTitle">
-				<h1>SCIENCE COMMUNICATION:</h1>
+				<h1 style="font-size:15px">SCIENCE COMMUNICATION:</h1>
+				<p> </p>
 				<p> Here you will find some videos explaining a little bit more about my projects. I hope you enjoy learning more about soybeans. </p>
 			</div>
 
