updated, figures, texts, and links

--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
 						In 2016 I began my MSc at the University of São Paulo in Brazil. There I worked on the development of food-type soybean, where besides studying the genetic control of several traits, I made selections of new lines suitable for human consumption and high yields. In addition to my main project, I learned important concepts in the courses I took, but the ones that had a greater impact in my decision on the PhD choice were Bioinformatics and Computational Tools Applied to Genomics. These courses developed in me an interest to study the genomic foundation of the traits I was evaluating in the breeding program.
 					</p>
 					<p align="justify">
-						After going through the experiences mentioned before and having the time to improve my understanding of plant breeding and genetics, I have decided to pursue my PhD studies in the United States. Currently I am a second year PhD student in Plant Breeding, Genetics and Genomics at the University of Georgia, under Dr. Zenglu Li. At the UGA my work is focused on understanding the genetic control of seed composition and disease resistance in soybeans. You can learn more about my research <a href="https://seedworld.com/communicating-science-in-2021-qa-with-renan-souza/">here</a>.  I hope that in the future I can give back all the knowledge and experience I had the privilege to access and obtain, in the form of teaching or working in the development of new cultivars.
+						After going through the experiences mentioned before and having the time to improve my understanding of plant breeding and genetics, I have decided to pursue my PhD studies at the University of Georgia, studying the genetic control of seed composition and disease resistance in soybeans. You can learn more about my research <a href="https://seedworld.com/communicating-science-in-2021-qa-with-renan-souza/">here</a>.
 					</p>
+					<p align="justify">
+            Currently, I am a Postdoctoral researcher at the <a href="https://www.hudsonalpha.org/">HudsonAlpha Institute for Biotechnology</a> where I work on the assembly of reference genomes and the domestication of new crops.
+					</p>
+
 					<header>
 						<h3>
 						<span class="byline">A short bio:</span>
@@ -109,7 +113,7 @@ li {list-style-position: outside;}
 			<div class="sectionContent">
 				<article>
 					<a href="https://plantbreeding.caes.uga.edu/">University of Georgia - Institute of Plant Breeding Genetics and Genomics</a>
-					<li class="subDetails">PhD in Plant Breeding, Genetics and Genomics. January 2019 - Present.</li>
+					<li class="subDetails">PhD in Plant Breeding, Genetics and Genomics. 2019 - 2023.</li>
 					<li class="subDetails">Work on the genetic improvement of seed composition and disease resistance in soybeans at the <a href="https://soybeans.uga.edu/">UGA Soybean Breeding and Genetics Laboratory.</a></li>
 				</article>
 
@@ -149,6 +153,12 @@ li {list-style-position: outside;}
 			</div>
 
 			<article>
+				<p class="subDetails">Souza R, Buckley B, Rouf Mian MA, Li Z. Mining exotic germplasm for genetic improvement of protein quantity and quality in Soybean (Glycine max). Plant Breeding, 2024.
+				<p> </p>
+				<p class="subDetails">Souza R, Rouf Mian MA, Vaughn JN, Li Z. Introgression of a Danbaekkong high-protein allele across different genetic backgrounds in soybean. Frontiers in Plant Science, v14, 2023. <a href="https://doi.org/10.3389/fpls.2023.1308731">doi.org/10.3389/fpls.2023.1308731.</a></p>
+				<p> </p>
+				<p class="subDetails">Nair RM, Boddepalli VN, Yan MR, Kumar V, Gill B, Pan RS, Wang C, Hartman GL, Silva e Souza R, Somta P. Global Status of Vegetable Soybean. Plants. 12(3):609, 2023 <a href="https://doi.org/10.3390/plants12030609">doi.org/10.3390/plants12030609.</a></p>
+				<p> </p>
 				<p class="subDetails">Silva e Souza, R; Barbosa, PAM; Yassue, RM; et al. Combining ability for the improvement of vegetable soybean. Agronomy Journal, v. 112, 2020. <a href="https://doi.org/10.1002/agj2.20322">doi.org/10.1002/agj2.20322.</a></p>
 				<p> </p>
 				<p class="subDetails">Espolador, FG; Yassue, RM; Morosini, JS; Bornhofen, E; Barbosa, PAM; Souza, RS; Vello, NA. Assessing tolerance to Asian soybean rust in soybean inbred lines from exotic and adapted crosses. Euphytica, v. 216, 2020. <a href="https://doi.org/10.1007/s10681-020-02597-8">doi.org/10.1007/s10681-020-02597-8.</a></p>
@@ -169,7 +179,7 @@ li {list-style-position: outside;}
 			<div class="sectionTitle">
 				<h1 style="font-size:15px">SCIENCE COMMUNICATION:</h1>
 				<p> </p>
-				<p> Here you will find some videos explaining a little bit more about my projects. I hope you enjoy learning more about soybeans. </p>
+				<p> Here you will find some videos explaining a little bit more about plant breeding.</p>
 			</div>
 
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/xA9pRz9pjZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
