--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ li {list-style-position: outside;}
 			</div>
 
 			<article>
+				<p class="subDetails">Souza R,  Van Tassel D, Korani W, Harkess A, Clevenger J. Accelerating domestication of perennial plants with genomics. IScience, v28(7), 2025. <a href="https://doi.org/10.1016/j.isci.2025.112836">doi.org/10.1016/j.isci.2025.112836.</a></p>
+				<p> </p>
 				<p class="subDetails">Souza R, Buckley B, Rouf Mian MA, Li Z. Mining exotic germplasm for genetic improvement of protein quantity and quality in Soybean (Glycine max). Plant Breeding, 1-13, 2024. <a href="https://doi.org/10.1111/pbr.13165">doi.org/10.1111/pbr.13165.</a></p>
 				<p> </p>
 				<p class="subDetails">Souza R, Rouf Mian MA, Vaughn JN, Li Z. Introgression of a Danbaekkong high-protein allele across different genetic backgrounds in soybean. Frontiers in Plant Science, v14, 2023. <a href="https://doi.org/10.3389/fpls.2023.1308731">doi.org/10.3389/fpls.2023.1308731.</a></p>
